--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Data Science in Agriculture # Website name
-baseurl: 'https://academic-demo.netlify.app/' # Website URL
+baseurl: 'https://luanppott.netlify.app/' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
