--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Publications
     url: '#featured'
     weight: 50
+  - name: Posts
+    url: '#posts'
+    weight: 60
   #- name: Courses
     #url: courses/
     #weight: 60
